--- a/views/pages/templates/edamamAPI.ejs
+++ b/views/pages/templates/edamamAPI.ejs
@@ -37,11 +37,11 @@
               console.log(data["hits"][i]["recipe"]["label"]);
               $("#oneSpan").append("<br><div class='container' id='divOne'>" +
                                   "<h1><a href='" + data["hits"][i]["recipe"]["url"] + "'  target='_blank'>" + data["hits"][i]["recipe"]["label"] + "</a></h1>" + "<br>" +
-                                  "<h3>Calories: " +  Math.round(data["hits"][i]["recipe"]["calories"])+"</h3><br>" +
+                                  "<h3>Calories per recipe:  " +  Math.round(data["hits"][i]["recipe"]["calories"])+"</h3><br>" +
                                   "<h3>Diet Labels: " + data["hits"][i]["recipe"]["dietLabels"] + "</h3><br>" + 
                                   "<h3>Source: " + data["hits"][i]["recipe"]["source"] + "</h3><br>" + 
                              
-                                  "<img src='" +data["hits"][i]["recipe"]["image"] + "'>" + "<br>" +
+                                  "<img id='imges' src='" +data["hits"][i]["recipe"]["image"] + "'>" + "<br>" +
                                   
                                   "</div>")
                                   ;
@@ -57,3 +57,8 @@
     } //End of recipeSearch() function.
         
 </script>
+<style>
+    #imges{
+    border:4px solid black;
+    }
+</style>
