--- a/views/pages/googleVision.ejs
+++ b/views/pages/googleVision.ejs
@@ -1,5 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Cloud Vision Demo</title>
+  <link rel="stylesheet" type="text/css" href="stylesheets/style.css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+</head>
+<body>
 
-'use strict';
+  <script>
+  
+  
+  window.apiKey = 'AIzaSyAgbUpBiD8-oj_UDzRg2LkkEa-gEWTguWw';
+  'use strict';
 console.log("In main");
 var CV_URL = 'https://vision.googleapis.com/v1/images:annotate?key=' + window.apiKey;
 
@@ -64,9 +77,40 @@ function sendFileToCloudVision (content) {
  */
 function displayJSON (data) {
   var contents = JSON.stringify(data, null, 4);
+  //$('#results').text(contents);
+  console.log(data);
   
-  $('#results').text(contents);
+    
+  
+  for(var i = 0;i<5;i++){
+                 
+              $("#oneSpan").append("<h1>" +   data["responses"][0]["labelAnnotations"][i]["description"] +"</h1>"+
+                                    "<br><h2>" + data["responses"][0]["labelAnnotations"][i]["score"] +"</h1>");
+                };
+  
+  
+  
   var evt = new Event('results-displayed');
   evt.results = contents;
   document.dispatchEvent(evt);
 }
+  </script>
+  <form id="fileform" action="">
+    <select name="type">
+      <option value="LANDMARK_DETECTION">LANDMARK_DETECTION</option>
+      <option value="TYPE_UNSPECIFIED">TYPE_UNSPECIFIED</option>
+      <option value="FACE_DETECTION">FACE_DETECTION</option>
+      <option value="LOGO_DETECTION">LOGO_DETECTION</option>
+      <option value="LABEL_DETECTION">LABEL_DETECTION</option>
+      <option value="TEXT_DETECTION">TEXT_DETECTION</option>
+      <option value="SAFE_SEARCH_DETECTION">SAFE_SEARCH_DETECTION</option>
+      <option value="IMAGE_PROPERTIES">IMAGE_PROPERTIES</option>
+    </select><br />
+    <input type="file" name="fileField"><br /><br />
+    <input type="submit" name="submit" value="Submit">
+  </form>
+
+  <code style="white-space:pre" id="results"></code>
+  <div id="oneSpan"></div>
+</body>
+</html>
