--- a/views/pages/templates/header.ejs
+++ b/views/pages/templates/header.ejs
@@ -1,4 +1,5 @@
-     <style>
+     
+<style>
     #divOne{
     margin: auto;
     width: 50%;
@@ -43,13 +44,10 @@
     
 }
      </style>
-     
-     
-      <div class="jumbotron text-center" id="jumbo">
-        <h1 id="title1">Recipe Vision</h1>
-      
-        </div>
-         <div id="fb-root"></div>
+<div class="jumbotron text-center" id="jumbo">
+  <h1 id="title1">Recipe Vision</h1>
+</div>
+<div id="fb-root"></div>
 <script>
 //process.env(facebookID);
      window.fbAsyncInit = function() {
@@ -86,35 +84,39 @@
   
 </script>
 <div class="container">
-    <hr>
+  <hr>
     <nav class="navbar navbar-toggleable-md">
- 
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-    </button>
-   
-    <a class="navbar-brand" href="#">Recipe Vision</a>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand" href="#">Recipe Vision</a>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="/">Home <span class="sr-only"></span></a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="/features">Features</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="#">Recipes</a>
-                </li>
-                <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <li class="nav-item active">
+            <a class="nav-link" href="/">Home 
+              <span class="sr-only"></span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/features">Features</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Recipes</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Facebook
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="#"><div class="fb-login-button" data-max-rows="1" data-size="small" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false"></div></a>
-                <a class="dropdown-item" href="#"><div id="shareBtn" class="btn btn-success clearfix" data-size="small">Share</div></a>
-                <a class="dropdown-item" href="#"></a>
-                </div>
-            </li>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="#">
+                <div class="fb-login-button" data-max-rows="1" data-size="small" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false"></div>
+              </a>
+              <a class="dropdown-item" href="#">
+                <div id="shareBtn" class="btn btn-success clearfix" data-size="small">Share</div>
+              </a>
+              <a class="dropdown-item" href="#"></a>
+            </div>
+          </li>
         </ul>
-   </div> 
-</nav>
+      </div>
+    </nav>
