--- a/views/pages/search.ejs
+++ b/views/pages/search.ejs
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>
-    Recipe Vision
+    <%= title %>
     </title>
   <% include templates/includes.ejs %>
   <% include templates/edamamAPI.ejs %>
