--- a/views/pages/templates/edamamAPI.ejs
+++ b/views/pages/templates/edamamAPI.ejs
@@ -3,7 +3,7 @@
 //Recipe Search Function
     function recipeSearch(){
         //alert("Clicked!");
-      
+      $("#wait").css("display", "block");
         console.log("EDAMAM API");
             
         //Clears the div's contents after each new search
@@ -11,6 +11,7 @@
         $("#image").html("");
         $("#source").html("");
         $("#oneSpan").html("");
+        $("#recipeLabel").html("");
 
         //AJAX request for Edamam API
         $.ajax({
@@ -26,39 +27,66 @@
                 
             // EDAMAM API
             data: {
+                // HERE I PASS IN THE SEARCH VALUE FOR Q WHICH IS THE SEARCH VALUE
                 "q":$("#searchValue").val(),
                 "app_key":"", // API Key PLEASE USE YOUR OWN
             },
         
             success: function(data,status) {
+                
+            // VIEW CONSOLE TO SEE JSON OBJECTS
               console.log(data);
               console.log(data.length);
+              
+              
+              // FOR LOOP TO DISPLAY JSON OBJECTS
               for(var i = 0 ; i <5;i++){
               console.log(data["hits"][i]["recipe"]["label"]);
+        $("#recipeLabel").html("");
+              
+              // APPEND OBJECTS TO A DIV WITH THE ID CALLED 'ONESPAN'
               $("#oneSpan").append("<br><div class='container' id='divOne'>" +
                                   "<h1><a href='" + data["hits"][i]["recipe"]["url"] + "'  target='_blank'>" + data["hits"][i]["recipe"]["label"] + "</a></h1>" + "<br>" +
+                                  // ROUND CALORIES BECAUSE ITS A DECIMAL
                                   "<h3>Calories per recipe:  " +  Math.round(data["hits"][i]["recipe"]["calories"])+"</h3><br>" +
                                   "<h3>Diet Labels: " + data["hits"][i]["recipe"]["dietLabels"] + "</h3><br>" + 
-                                  "<h3>Source: " + data["hits"][i]["recipe"]["source"] + "</h3><br>" + 
+                                  "<h3>Source: " + data["hits"][i]["recipe"]["source"] + "</h3><br>" + "<br><br><br>"+
                              
                                   "<img id='imges' src='" +data["hits"][i]["recipe"]["image"] + "'>" + "<br>" +
+                                
+                                "<form action='/action_page.php' method='get'>"
+                                +"  <input class='recipeCheckBox' type='checkbox' id='testingVal' onclick='testFunct(\""+ data["hits"][i]["recipe"]["label"]+ "\")' >"+"Add to recipe book" + 
+                                "<br>"+
+                                "</form>"+
                                   
-                                  "</div>")
+                                  "</div>"
+
+                                     )
                                   ;
               }
             },
         
             complete: function(data,status) { 
+                // SEE IF WE GET AN ERROR
               console.log(status);
+               $("#wait").css("display", "none");
             }
         
 		});//AJAX
 
     } //End of recipeSearch() function.
+    
+    function testFunct(recipeValue){
+
+        // GET THE VALUE OF WHAT WE WANT TO ADD TO OUR RECIPE BOOK
+        alert(recipeValue);
+      
+    }
         
 </script>
 <style>
     #imges{
     border:4px solid black;
     }
+    
 </style>
