--- a/views/pages/templates/header.ejs
+++ b/views/pages/templates/header.ejs
@@ -98,10 +98,10 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/features">Features</a>
+            <a class="nav-link" href="/features">Try it now!</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Recipes</a>
+            <a class="nav-link" href="#">Recipe Book</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
