adding more features

--- a/views/pages/features.ejs
+++ b/views/pages/features.ejs
@@ -21,7 +21,6 @@
         <% include templates/header.ejs %>
          <% include templates/edamamAPI.ejs %>
          <% include templates/googleVision.ejs %>
-        
 
   <form id="fileform" action="">
     <select name="type">
@@ -40,7 +39,7 @@
   
   <style>
   #fileChoose{
-        border: 2px solid #dce4ec;
+    border: 2px solid #dce4ec;
     display: block;
     padding: 1em;
     cursor: pointer;
@@ -65,7 +64,7 @@
         
     
     <!-- Tomato Loading Icon -->
-    <div id="wait" style="display:none;width:69px;height:89px;position:absolute;top:50%;left:50%;padding:2px;"><img src="https://i.imgur.com/aqcDItL.gif" alt="My_Logo"></div>
+    <div id="wait" style="display:none;width:69px;height:89px;position:absolute;top:50%;left:50%;padding:2px;"><img src="images/fruits-tomato.gif" alt="My_Logo"></div>
       
        <!-- Recipe Display see edamamAPI.ejs for jquery data -->
       <center>
