--- a/views/pages/templates/googleVision.ejs
+++ b/views/pages/templates/googleVision.ejs
@@ -67,7 +67,7 @@ function displayJSON (data) {
   var contents = JSON.stringify(data, null, 4);
   //$('#results').text(contents);
   console.log(data);
-  
+ $("#googleSpan").html("");
     
   
   for(var i = 0;i<5;i++){
