--- a/views/pages/templates/header.ejs
+++ b/views/pages/templates/header.ejs
@@ -1,17 +1,11 @@
      
 <style>
     #divOne{
-    margin: auto;
-    width: 50%;
-    border: 5px solid black;
-    padding: 30px;
-    background-color:white;
-    border-radius: 25px;
-    font-style: oblique;
-    background-color: white;
+    float:left;
+    text-size:10em;
     }
     #jumbo{
-    background-image: url("https://i.imgur.com/JcsaUOC.png");
+    background-image: url("images/recipeVisionBorder.png");
     background-color:white;
     }
     
@@ -38,9 +32,6 @@
 .navbar-brand{
     color:black;
      font-size:1.5em;
-    
-}
-.navbar navbar-toggleable-md{
     
 }
      </style>
@@ -83,13 +74,14 @@
         }
   
 </script>
+<title>Recipe Vision</title>
 <div class="container">
   <hr>
     <nav class="navbar navbar-toggleable-md">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="#">Recipe Vision</a>
+      <a class="navbar-brand" href="#"><%= title %></a>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item active">
@@ -101,7 +93,7 @@
             <a class="nav-link" href="/features">Try it now!</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Recipe Book</a>
+            <a class="nav-link" href="/recipebook">Recipe Book</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
