--- a/views/pages/templates/edamamAPI.ejs
+++ b/views/pages/templates/edamamAPI.ejs
@@ -40,36 +40,33 @@
               
               
               // FOR LOOP TO DISPLAY JSON OBJECTS
-              for(var i = 0 ; i <5;i++){
+              for(var i = 0 ; i <9;i++){
               console.log(data["hits"][i]["recipe"]["label"]);
         $("#recipeLabel").html("");
-              
+            
               // APPEND OBJECTS TO A DIV WITH THE ID CALLED 'ONESPAN'
-              $("#oneSpan").append("<br><div class='container' id='divOne'>" +
-                                  "<h1><a href='" + data["hits"][i]["recipe"]["url"] + "'  target='_blank'>" + data["hits"][i]["recipe"]["label"] + "</a></h1>" + "<br>" +
+              $("#oneSpan").append("<div class='container' id='recipeBox'>" +
+                                  "<h4><a href='" + data["hits"][i]["recipe"]["url"] + "'  target='_blank'>" + data["hits"][i]["recipe"]["label"] + "</a></h4>" +
                                   // ROUND CALORIES BECAUSE ITS A DECIMAL
-                                  "<h3>Calories per recipe:  " +  Math.round(data["hits"][i]["recipe"]["calories"])+"</h3><br>" +
-                                  "<h3>Diet Labels: " + data["hits"][i]["recipe"]["dietLabels"] + "</h3><br>" + 
-                                  "<h3>Source: " + data["hits"][i]["recipe"]["source"] + "</h3><br>" + "<br><br><br>"+
+                                  "<h6>Calories per recipe:  " +  Math.round(data["hits"][i]["recipe"]["calories"])+"</h6>" +
+                                  "<h6>Diet Labels: " + data["hits"][i]["recipe"]["dietLabels"] + "</h6>" + 
+                                  "<h6>Source: " + data["hits"][i]["recipe"]["source"] + "</h6>" + 
                              
-                                  "<img id='imges' src='" +data["hits"][i]["recipe"]["image"] + "'>" + "<br>" +
+                                  "<img id='imges' src='" +data["hits"][i]["recipe"]["image"] + "'>"  +
                                 
                                 "<form action='/action_page.php' method='get'>"
                                 +"  <input class='recipeCheckBox' type='checkbox' id='testingVal' onclick='testFunct(\""+ data["hits"][i]["recipe"]["label"]+ "\")' >"+"Add to recipe book" + 
-                                "<br>"+
+                            
                                 "</form>"+
                                   
-                                  "</div>"
-
-                                     )
-                                  ;
+                                  "</div>");
               }
             },
         
             complete: function(data,status) { 
                 // SEE IF WE GET AN ERROR
+                     $("#wait").css("display", "none");
               console.log(status);
-               $("#wait").css("display", "none");
             }
         
 		});//AJAX
@@ -87,6 +84,23 @@
 <style>
     #imges{
     border:4px solid black;
+    width:13em;
+    height:13em;
+    }
+    #recipeBox{
+        margin:0 auto;
+        margin-right:2em;
+        margin-left:2em;
+        float:left;
+        margin-bottom:1em;
+        margin-top:1em;
+        width:20em;
+        height:25em;
+        overflow:auto;
+        border:2px solid black;
+        -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+        -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+        box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     }
     
 </style>
