--- a/views/pages/features.ejs
+++ b/views/pages/features.ejs
@@ -83,7 +83,8 @@
             }
         });
     </script>
-          
-
+        
+    <!-- Include Footer File -->  
+    <% include templates/footer.ejs %>
     </body>
 </html>
