--- a/views/pages/recipebook.ejs
+++ b/views/pages/recipebook.ejs
@@ -1,14 +1,16 @@
 <html>
 
 <head>
+    <!-- Include includes file -->
     <% include templates/includes.ejs %>
 </head>
 
 <body>
-    <!-- Inclue header template -->
+    <!-- Include header template -->
     <% include templates/header.ejs %>
    
-
+    <!-- Inclue footer template -->
+    <% include templates/footer.ejs %>
 </body>
 
 </html>
