--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,13 +1,16 @@
 <html>
 
 <head>
+    <!-- Include includes template -->
     <% include templates/includes.ejs %>
 </head>
 
 <body>
-    <!-- Inclue header template -->
+    <!-- Include header template -->
     <% include templates/header.ejs %>
-
+    
+    <!-- Include footer template -->
+    <% include templates/footer.ejs %>
 </body>
 
 </html>
