--- a/views/pages/templates/header.ejs
+++ b/views/pages/templates/header.ejs
@@ -110,6 +110,9 @@
               <a class="dropdown-item" href="#"></a>
             </div>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/userRegister">Sign Up</a>
+          </li>
         </ul>
       </div>
     </nav>
