--- a/views/pages/features.ejs
+++ b/views/pages/features.ejs
@@ -44,6 +44,9 @@
     color: red;
     margin-top: .2em;
   }
+  h3{
+      text-align: left;
+  }
   </style>
 
 <span id="googleSpan"></span>
@@ -64,11 +67,10 @@
     <!-- Tomato Loading Icon -->
     <div id="wait" style="display:none;width:69px;height:89px;position:absolute;top:50%;left:50%;padding:2px;"><img src="images/fruits-tomato.gif" alt="My_Logo"></div>
        <!-- Recipe Display see edamamAPI.ejs for jquery data -->
-      <center>
-        <span id="oneSpan"></span>
-      </center>
-
-
+        <center>
+            <span id="oneSpan"></span>
+        </center>
+        <div id="youtubeSpan"></div>
     </body>  
     <script>
          // allows the user to press 'enter' to search
