--- a/views/pages/templates/youtubeAPI.ejs
+++ b/views/pages/templates/youtubeAPI.ejs
@@ -6,7 +6,7 @@
         //Clears the div's contents after each new search
         $("#label").html("");
         $("#image").html("");
-        $("#videos").html("");
+        $("#youtubeSpan").html("");
 
         //AJAX request for Youtube API
         $.ajax({
@@ -14,20 +14,19 @@
 	        type: 'get',
 	        url: 'https://www.googleapis.com/youtube/v3/search',
 	        data: ({
-	            key: 'AIzaSyCz1uT-R_zGecbkn2CXr-qc8s3al1thluA',
+	            key: '<%= youtubeAPI %>',
 		        q: $('#searchValue').val() + ' recipes',
-		        part: 'snippet',
-		        videoembeddable: 'any'
+		        part: 'snippet'
 	         }),
         
             success: function(data,status) {
                 console.log(data);
                 console.log("hello");
-              
+
                 for(var i = 0; i < 3; i++) {
                     //console.log(data["items"][i]);
-                    $("#videos").append("<br>" + 
-                    "<iframe width='420' height='315' src='https://www.youtube.com/embed/" + data["items"][i]["id"]["videoId"] + "'></iframe>")
+                    $("#youtubeSpan").append("<br>" + 
+                    "<iframe width='350' height='250' src='https://www.youtube.com/embed/" + data["items"][i]["id"]["videoId"] + "'></iframe>")
                 }
             },
         
@@ -38,10 +37,24 @@
     } //End of youtubeSearch() function.
 </script>
 <style>
-    #videos{
-        width:100%;
-    }
     #imges{
-        border:4px solid black;
+    border:4px solid black;
+    width:13em;
+    height:13em;
+    }
+    #recipeBox{
+        margin:0 auto;
+        margin-right:2em;
+        margin-left:2em;
+        float:left;
+        margin-bottom:1em;
+        margin-top:1em;
+        width:20em;
+        height:25em;
+        overflow:auto;
+        border:2px solid black;
+        -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+        -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+        box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     }
 </style>
