--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,6 +1,8 @@
 <html>
 
 <head>
+    
+
     <!-- Include includes template -->
     <% include templates/includes.ejs %>
 </head>
@@ -8,9 +10,85 @@
 <body>
     
     <!-- Include header template -->
-    <% include templates/header.ejs %>
+  <% include templates/header.ejs %>
   
-    <!-- Include footer template -->
+    <style>
+    #registrationBox{
+      border:2px solid green;
+      padding:2em;
+      height:20em;
+      width:20em;
+    }
+
+    </style>
+    
+    <!--<table>-->
+    <!--  <tr>-->
+    <!--    <td>Enter Username<input id="username"></input></td>-->
+    <!--  </tr>-->
+    <!--  <tr>-->
+    <!--    <td>Enter Email<input id="email"></input></td>-->
+    <!--  </tr>-->
+    <!--  <tr>-->
+    <!--    <td>Enter Password<input id="password"></input></td>-->
+    <!--  </tr>-->
+    <!--</table>-->
+
+      <div id="registrationBox">  
+  <form id="contact" action="" method="post">
+    <h3>Registration</h3>
+    <fieldset>
+      <input placeholder="Username" id="username" tabindex="1" required autofocus>
+    </fieldset>
+    <fieldset>
+      <input placeholder="Email" id="email" tabindex="2" required>
+    </fieldset>
+    <fieldset>
+      <input type="telephone" placeholder="Phone Number(Optional)" id="telephone" tabindex="3" required>
+    </fieldset>
+    <fieldset>
+      <input type="password" placeholder="Password" id="password" required>
+    </fieldset>
+       <fieldset>
+      <input type="password" placeholder="Confirm Password" id="confirmPassword" required>
+    </fieldset>
+    <fieldset>
+      <button name="submit" type="submit" id="contact-submit" onclick="getRegistration()">Submit</button>
+    </fieldset>
+    
+  </form>
+</div>
+      
+   
+      
+      
+      <script src="/socket.io/socket.io.js"></script>
+      <script>
+      
+      function getRegistration(){
+        var username = document.getElementById("username");
+        var email = document.getElementById("email");
+        var password = document.getElementById("password");
+        var confirmpassword = document.getElementById("confirmPassword");
+        var phone = document.getElementById("telephone");
+        
+        
+        //console.log(iii.value);
+        //alert(iii.value);
+        var socket = io();
+        var test = "connected1";
+        var parameters = { usernameParam: username.value, emailParam:email.value,passwordParam:password.value};
+        console.log(parameters);
+        socket.emit('initialize', parameters);
+        socket.on('chat', function(msg) {
+            alert(msg);
+            
+        });
+      }
+         
+      </script>
+  
+    
     <% include templates/footer.ejs %>
     
 </body>
