--- a/views/pages/templates/edamamAPI.ejs
+++ b/views/pages/templates/edamamAPI.ejs
@@ -1,9 +1,12 @@
-<script>
+<% include youtubeAPI.ejs %> 
 
+
+<script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+<script>
 //Recipe Search Function
     function recipeSearch(){
         //alert("Clicked!");
-      
+      $("#wait").css("display", "block");
         console.log("EDAMAM API");
             
         //Clears the div's contents after each new search
@@ -11,6 +14,7 @@
         $("#image").html("");
         $("#source").html("");
         $("#oneSpan").html("");
+        $("#recipeLabel").html("");
 
         //AJAX request for Edamam API
         $.ajax({
@@ -26,39 +30,102 @@
                 
             // EDAMAM API
             data: {
+                // HERE I PASS IN THE SEARCH VALUE FOR Q WHICH IS THE SEARCH VALUE
                 "q":$("#searchValue").val(),
                 "app_key":"", // API Key PLEASE USE YOUR OWN
             },
         
             success: function(data,status) {
+                
+            // VIEW CONSOLE TO SEE JSON OBJECTS
               console.log(data);
               console.log(data.length);
-              for(var i = 0 ; i <5;i++){
+              
+              // FOR LOOP TO DISPLAY JSON OBJECTS
+              for(var i = 0 ; i <9;i++){
               console.log(data["hits"][i]["recipe"]["label"]);
-              $("#oneSpan").append("<br><div class='container' id='divOne'>" +
-                                  "<h1><a href='" + data["hits"][i]["recipe"]["url"] + "'  target='_blank'>" + data["hits"][i]["recipe"]["label"] + "</a></h1>" + "<br>" +
-                                  "<h3>Calories per recipe:  " +  Math.round(data["hits"][i]["recipe"]["calories"])+"</h3><br>" +
-                                  "<h3>Diet Labels: " + data["hits"][i]["recipe"]["dietLabels"] + "</h3><br>" + 
-                                  "<h3>Source: " + data["hits"][i]["recipe"]["source"] + "</h3><br>" + 
-                             
-                                  "<img id='imges' src='" +data["hits"][i]["recipe"]["image"] + "'>" + "<br>" +
+              $("#recipeLabel").html("");
+            
+              // APPEND OBJECTS TO A DIV WITH THE ID CALLED 'ONESPAN'
+              
+              $("#oneSpan").append("<div class='container' id='recipeBox'>" +
+                                  "<h4><a href='" + data["hits"][i]["recipe"]["url"] + "'  target='_blank'>" + data["hits"][i]["recipe"]["label"] + "</a></h4>" +
+                                  // ROUND CALORIES BECAUSE ITS A DECIMAL
+                                  "<h6>Calories per recipe:  " +  Math.round(data["hits"][i]["recipe"]["calories"])+"</h6>" +
+                                  "<h6>Diet Labels: " + data["hits"][i]["recipe"]["dietLabels"] + "</h6>" + 
+                                  "<h6>Source: " + data["hits"][i]["recipe"]["source"] + "</h6>" + 
                                   
-                                  "</div>")
-                                  ;
+                                  "<img id='imges' src='" +data["hits"][i]["recipe"]["image"] + "'>"  
+
+                               + "<form action='routes/features.js' method='post'>"
+                                +"  <input class='recipeCheckBox' type='checkbox' id='testingVal' onclick='getRecipeURI(\""+ data["hits"][i]["recipe"]["uri"]+ "\")' >"+"Add to recipe book" + 
+                            
+                                "</form>"+
+                                  
+                                  "</div>");
               }
             },
         
             complete: function(data,status) { 
-              console.log(status);
+                // SEE IF WE GET AN ERROR
+            $("#wait").css("display", "none");
+            
+              youtubeSearch();
+             console.log(status);
             }
         
 		});//AJAX
 
     } //End of recipeSearch() function.
-        
+    
+
+    // getRecipeURI(recipeValue)
+    function getRecipeURI(recipeValue){
+      
+      //  alert(recipeValue);
+      var a = "TEST";
+    // get recipe URI send it to index.js(server)
+      var parameters = { value: recipeValue,testVal:a };
+       $.get('/recipeURI',parameters, function(data) {
+     //  $('#results').html(data);
+     });
+    }
+
+
 </script>
+
+
 <style>
     #imges{
-    border:4px solid black;
+        border:4px solid green;
+        width:13em;
+        height:13em;
+        opacity:1;
+        display:block;
+        transition:.5s ease;
+        backface-visibility:hidden;
     }
+
+    .text {
+        background-color: #4CAF50;
+        color: white;
+        font-size: 16px;
+        padding: 16px 32px;
+    }
+    #recipeBox{
+        margin:0 auto;
+        margin-right:2em;
+        margin-left:2em;
+        float:left;
+        margin-bottom:1em;
+        margin-top:1em;
+        width:20em;
+        height:25em;
+        overflow:auto;
+        border:2px solid green;
+        -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+        -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+        box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    }
+    
 </style>
