--- a/views/pages/templates/header.ejs
+++ b/views/pages/templates/header.ejs
@@ -1,18 +1,18 @@
-     
+     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 <style>
     #divOne{
-    margin: auto;
-    width: 50%;
-    border: 5px solid black;
-    padding: 30px;
-    background-color:white;
-    border-radius: 25px;
-    font-style: oblique;
-    background-color: white;
+    float:left;
+    text-size:10em;
     }
     #jumbo{
-    background-image: url("https://i.imgur.com/JcsaUOC.png");
+    background-image: url("images/recipeVisionBorder.png");
     background-color:white;
+    border-top:0;
+    border-left:0;
+    border-right:0;
+    border-bottom:.2em solid #59ea1c;
+ box-shadow: 0px 0px 8px 2px #000000
     }
     
     #title1{
@@ -20,7 +20,7 @@
     font-size:4em;
     font-weight:bold;
     color:white;
-    text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+    text-shadow: 1px 1px 2px black, 0 0 25px green, 0 0 5px darkgreen;
     
     }
     #navBar{
@@ -29,19 +29,52 @@
     font-weight:bold;
     color:white;
     text-shadow: 1px 1px 2px white, 0 0 25px black, 0 0 5px black;
+    
+      
     }
 .nav-link{
     color:black;
     font-size:1.5em;
+    float:left;
+    border:1px solid green;
+    margin-left:.25em;
+    margin-right:.25em;
+    padding:1px;
+    display: inline-block;
+    padding: 15px 25px;
+    font-size: 24px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+    background-color: #4CAF50;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 2px #000000;
+    
   
 }
+.nav-link:hover {background-color: #3e8e41}
+
+.nav-link:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
 .navbar-brand{
     color:black;
-     font-size:1.5em;
-    
+    font-size:2em;
+    padding:.2em;
+     border: 10px solid transparent;
+    -webkit-border-image: url(images/border.png) 50% round; /* Safari 3.1-5 */
+    -o-border-image: url(images/border.png) 50% round; /* Opera 11-12.1 */
+    border-image: url(images/border.png) 50% round;
 }
-.navbar navbar-toggleable-md{
-    
+a:not([href]):not([tabindex]){
+  color:black;
+
 }
      </style>
 <div class="jumbotron text-center" id="jumbo">
@@ -49,7 +82,10 @@
 </div>
 <div id="fb-root"></div>
 <script>
+
+//facebook API not yet working
 //process.env(facebookID);
+/*
      window.fbAsyncInit = function() {
       FB.init({
         appId      : '168050303776214',
@@ -81,42 +117,51 @@
             href: 'https://pacemaker438.herokuapp.com/',
           }, function(response){});
         }
-  
+  */
 </script>
+<title>Recipe Vision</title>
 <div class="container">
-  <hr>
+  <hr >
     <nav class="navbar navbar-toggleable-md">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"><i class="material-icons" style="font-size:2em">all_inclusive</i></span>
       </button>
-      <a class="navbar-brand" href="#">Recipe Vision</a>
+      <a class="navbar-brand"><%= title %></a>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="/">Home 
+            <a class="nav-link" href="/home">Home 
               <span class="sr-only"></span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/features">Features</a>
+            <a class="nav-link" href="/features">Try it now!</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Recipes</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Facebook
-                </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#">
-                <div class="fb-login-button" data-max-rows="1" data-size="small" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false"></div>
-              </a>
-              <a class="dropdown-item" href="#">
-                <div id="shareBtn" class="btn btn-success clearfix" data-size="small">Share</div>
-              </a>
-              <a class="dropdown-item" href="#"></a>
-            </div>
-          </li>
+            <a class="nav-link" href="/vision">Image Search</a>
+          </li>                
+
+          <li class="nav-item">
+            <a class="nav-link" href="/recipebook">Recipe Book</a>
+          </li> 
+       
         </ul>
       </div>
     </nav>
+    
+    <!--  <input id="test">  
+<button onclick="testFunction()">Test Button</button>
+-->
+<script>
+
+    function testFunction(){
+    console.log("in test function");
+    var a = document.getElementById("test");
+    console.log(a.value);
+      var parameters = { value: a.value };
+       $.get('/userINFO',parameters, function(data) {
+     //  $('#results').html(data);
+     console.log("Sent");
+     });
+    }
+</script>
