--- a/views/pages/templates/header.ejs
+++ b/views/pages/templates/header.ejs
@@ -34,7 +34,11 @@
      font-size:1.5em;
     
 }
-     </style>
+.modal, .modal-header {
+  text-align: center;
+}
+</style>
+
 <div class="jumbotron text-center" id="jumbo">
   <h1 id="title1">Recipe Vision</h1>
 </div>
@@ -110,9 +114,49 @@
               <a class="dropdown-item" href="#"></a>
             </div>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/userRegister">Sign Up</a>
-          </li>
         </ul>
+        
+          <ul class="nav navbar-nav navbar-right">
+            <li id="loginLink"><a class= "nav-link" href="#" data-toggle='modal' data-target='#myModal'>Log In</a></li>
+            <li id="signupLink"><a class= "nav-link" href="/userRegister">Sign Up</a></li>
+            <li id="accSettings" class="hidden"><a id="accLink"> Account Settings</a></li>
+            <li id="logoutLink" class="hidden"><a href="">Log Out</a></li>
+          </ul>
       </div>
     </nav>
+    
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <h4 class="modal-title" id="myModalLabel"> Log In </h4>
+            </div>
+            <div class="modal-body">
+                  <input type="text" id="username" name="username" placeholder="Username"><br>
+                  <input type="password" id="password" name="password"  placeholder="Password"><br>
+                  <button onclick="setLoginCookies()" name="loginForm">Login</button>
+            </div>
+          </div>
+        </div>
+    </div> 
+    <!-- End Modal -->
+    
+    <script>
+      function setLoginCookies() {
+        var username = $("#username").val();
+        var password = $("#password").val();
+        
+        var parameters = {username: username, password: password};
+        $.get('/anything', parameters, function(data){
+          console.log("Sending Login credentials");
+        });
+      }
+      
+      function logout() {
+        $.get('/logout', function(data) {
+          console.log("logging out...");
+        });
+      }
+    </script>
